--- a/src/components/Plataforma/style.module.scss
+++ b/src/components/Plataforma/style.module.scss
@@ -8,13 +8,13 @@
   justify-content: space-between;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 2rem;
-  gap: 2rem;
+  padding: $spacing-large;
+  gap: $spacing-medium;
 
   @include respond-to(md) {
     flex-direction: column;
+    padding: $spacing-medium;
     text-align: center;
-    padding: 1.5rem;
   }
 }
 
@@ -23,48 +23,37 @@
   text-align: left;
 
   h1 {
-    font-size: 2.0rem;
-    line-height: 3rem;
-    color: #374754;
-    margin-bottom: 1rem;
+    font-size: 2rem;
+    color: $primary-text-color;
+    margin-bottom: $spacing-small;
 
-    @include respond-to(sm) {
-      font-size: 1.8rem;
-      line-height: 2.5rem;
+    .textoDestacado {
+      font-weight: bold;
+      color: $primary-color;
     }
-  }
-
-  .textoDestacado {
-    font-weight: bold;
-    color: $primary-color;
   }
 
   p {
-    font-size: 1.2rem;
-    line-height: 1.8rem;
-    color: $foreground-color;
-    margin-bottom: 1.5rem;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    color: $secondary-text-color;
+    margin-bottom: $spacing-medium;
 
-    @include respond-to(sm) {
-      font-size: 1.1rem;
-      line-height: 1.6rem;
+    .subtextoDestacado {
+      color: $primary-color;
+      font-weight: bold;
     }
-  }
-
-  .subtextoDestacado {
-    color: $primary-color;
-    font-weight: bold;
   }
 
   .ctaButton {
     background-color: $primary-color;
-    color: #fff;
-    padding: 0.8rem 2.5rem;
+    color: #ffffff;
+    padding: 0.8rem 2rem;
     border: none;
     border-radius: 3rem;
     font-weight: bold;
     cursor: pointer;
-    transition: all 0.3s ease;
+    transition: background-color 0.3s ease, transform 0.2s ease;
 
     &:hover {
       background-color: darken($primary-color, 10%);
@@ -85,69 +74,8 @@
 
   .image {
     max-width: 100%;
-    height: auto;
     width: 400px;
-
-    @include respond-to(sm) {
-      width: 300px;
-    }
-  }
-}
-
-.modalOverlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-color: rgba(0, 0, 0, 0.7);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-  padding: 1rem;
-}
-
-.modalContent {
-  background-color: #fff;
-  padding: 2rem;
-  border-radius: 8px;
-  max-width: 500px;
-  width: 100%;
-  position: relative;
-}
-
-.closeButton {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  background: none;
-  border: none;
-  font-size: 1.5rem;
-  cursor: pointer;
-  color: #333;
-
-  &:hover {
-    color: #ff0000;
-  }
-}
-
-@include respond-to(sm) {
-  .modalContent {
-    padding: 1.5rem;
-  }
-
-  .closeButton {
-    font-size: 1.2rem;
-  }
-}
-
-@include respond-to(xs) {
-  .modalContent {
-    padding: 1rem;
-  }
-
-  .closeButton {
-    font-size: 1rem;
+    height: auto;
+    border-radius: 50%; // Torna a imagem circular
   }
 }
