--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -7,6 +7,8 @@ $primary-color: #0074bc;
 $secondary-color: #005fa3;
 $error-color: #ff0000;
 $border-color: #e0e0e0;
+$white-color: #ffffff;
+
 
 $font-family: 'DM Sans', sans-serif;
 $primary-text-color: #374754;
@@ -29,3 +31,5 @@ $breakpoint-sm: 768px;
 $breakpoint-md: 1024px;
 $breakpoint-lg: 1280px;
 $breakpoint-xl: 1440px;
+
+
