--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -8,6 +8,7 @@ $secondary-color: #005fa3;
 $error-color: #ff0000;
 $border-color: #e0e0e0;
 $white-color: #ffffff;
+$input-background: #f0f0f0; // Escolha a cor que preferir para o fundo dos inputs
 
 
 $font-family: 'DM Sans', sans-serif;
