--- a/src/app/login/styles.module.scss
+++ b/src/app/login/styles.module.scss
@@ -49,7 +49,7 @@
     border: 1px solid var(#374754);
     padding: 0 16px;
     border-radius: 8px;
-    color: white;
+    color: rgb(19, 100, 192);
     background-color: #eaf2f7;
     font-size: 16px;
 }
