--- a/src/app/parceiro/components/ContatoPartner/contato.module.scss
+++ b/src/app/parceiro/components/ContatoPartner/contato.module.scss
@@ -6,6 +6,7 @@
   justify-content: center;
   padding-top: 2rem;
   margin-bottom: 4rem; /* Espaço inferior para evitar sobreposição com o footer */
+  text-align: center;
 
   h2 {
     font-size: 2.4rem;
