--- a/src/components/Conteudo/styles.module.scss
+++ b/src/components/Conteudo/styles.module.scss
@@ -14,11 +14,22 @@
 
   h2 {
     @include typography-h2;
+    font-size: 2.4rem;
+    color: $primary-text-color; // Aplica a cor do texto principal
+    font-family: $font-family;
+    margin-bottom: $spacing-small;
   }
 
   span {
     @include typography-span;
     max-width: 800px;
+    font-size: 1.1rem;
+    line-height: 1.5rem;
+    color: $secondary-text-color; // Aplica a cor do texto secundário
+    padding-top: $spacing-small;
+    max-width: 800px;
+    margin: 0 auto;
+    font-family: $font-family;
   }
 }
 
