--- a/src/components/Faq/styles.module.scss
+++ b/src/components/Faq/styles.module.scss
@@ -8,15 +8,18 @@
   .faqHeader {
     h2 {
       font-size: 2.4rem;
-      color: $primary-text-color;
+      color: $primary-text-color; // Aplica a cor do texto principal
       font-family: $font-family;
-      margin-bottom: 1.5rem;
+      margin-bottom: $spacing-small;
     }
 
     p {
-      font-size: 1.2rem;
-      color: $secondary-text-color;
+      font-size: 1.1rem;
       line-height: 1.5rem;
+      color: $secondary-text-color; // Aplica a cor do texto secundário
+      padding-top: $spacing-small;
+      max-width: 800px;
+      margin: 0 auto;
       font-family: $font-family;
 
       span {
